--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==0.90.0
-transformers==4.13.0
-pyttsx3==2.90
-SpeechRecognition==3.8.1
+streamlit
+transformers
+pyttsx3
+SpeechRecognition
