--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==0.90.0
-transformers==4.11.3
-torch==1.10.0
-torchvision==0.11.1
-gtts==2.2.3
-pydub==0.30.2
+streamlit
+transformers
+torch
+torchvision
+gtts
+pydub
